# mlops-drift-retrain

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  image.yml  retrain.yml
configs/: config.yaml  thresholds.yaml
data/raw/: dataset.parquet.dvc
deploy/docker/: docker-compose.public.yml  docker-compose.yml  prometheus.yml  serving.Dockerfile
deploy/grafana/: drift_dashboard.json  serving_dashboard.json
deploy/helm/: kps-values-oke.yaml
deploy/k8s/: controller-deployment.yaml  grafana-dashboard-drift.yaml  grafana-dashboard-serving.yaml  pvc.yaml  seed-job.yaml  servicemonitors.yaml  serving-deployment.yaml  serving-service.yaml
deploy/k8s/oke/: kustomization.yaml
deploy/prometheus/: scrape.yml
docs/: architecture.md  deploy-oke.md  deploy-vm.md  deploy.md  spec.md
experiments/: drift_experiment.md
metrics/: train_metrics.json
notebooks/: 01_eda.ipynb
pipelines/: replay.py
src/mlops_drift/: __init__.py  config.py
src/mlops_drift/controller/: loop.py
src/mlops_drift/data/: features.py  ingest.py  split.py  synthetic.py  validation.py
src/mlops_drift/experiments/: __init__.py  architecture.py  replay.py  run.py
tests/: test_config.py  test_controller.py  test_data_validation.py  test_drift.py  test_experiment_plot.py  test_features.py  test_logging_store.py  test_model_behavior.py  test_monitor.py  test_performance.py  test_promotion.py  test_replay.py  test_serving.py  test_smoke.py  test_synthetic.py  test_training.py  test_training_pipeline.py
(+20 files in other folders)
