[project]
name = "mlops-drift-retrain"
version = "0.1.0"
description = "Drift-triggered automatic retraining platform for network-intrusion detection."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "pandera>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "pyarrow>=16.0",
    "mlflow>=2.16,<3",
    "evidently>=0.4.40,<0.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "matplotlib>=3.9",
    "dvc>=3.50",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_drift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=mlops_drift --cov-report=term-missing"
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
